Login page added, button css overlap fix and colour changes

--- a/style.css
+++ b/style.css
@@ -133,18 +133,20 @@ select {
 /* Style the submit button */
 button {
     width: 100%;
-    padding: 10px;
-    background-color: orange;
-    color: white;
+    background-color: rgb(172, 243, 248);
+    color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    padding: 8px 15px;
+    margin: 5px;
+    transition: background-color 0.3s ease;    
 }
 
 /* Button hover effect */
 button:hover {
-    background-color: rgb(255, 251, 0);
-    color: orange;
+    background-color: rgb(124, 212, 219);
+    color: rgb(0, 0, 0);
 }
 
 /* Table styles */
@@ -181,19 +183,6 @@ tbody tr:nth-of-type(even) {
 
 tbody tr:last-of-type {
     border-bottom: 2px solid orange;
-}
-
-/* Button styles */
-button {
-    padding: 8px 15px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    /* Slightly rounded corners */
-    color: white;
-    background-color: orange;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
 }
 
 .delete-btn {
